fix errors in current metadata

--- a/meta/1-3.md
+++ b/meta/1-3.md
@@ -1,9 +1,9 @@
 ---
 # 1. Indikator-Nummer eingeben
-sdg_goal: '5'
-indicator_number: 5.4
-graph_title: global_indicators.5-4-title
-indicator_sort_order: 05-04-01
+sdg_goal: '1'
+indicator_number: 1.3
+graph_title: global_indicators.1-3-title
+indicator_sort_order: 01-03-01
 
 # 2. Grafikart auswaehlen:
 data_non_statistical: false  # set to "false" for chart/graph visualization
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
     value: Bayern
 
 # 3. Berechnung und Quelle eingeben:
-national_geographical_coverage: Land BW
+national_geographical_coverage: Land Bayern
 computation_definitions: 
 
 SOURCE_TYPE:   # data source
