--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
     value: Bayern
 
 # 3. Berechnung und Quelle eingeben:
-national_geographical_coverage: Land BW
+national_geographical_coverage: Land Bayern
 computation_definitions: 
 
 SOURCE_TYPE:   # data source
