--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -7,3 +7,23 @@
 1-6-title: Anlauf-/ Beratungsstellen für Alleinerziehende
 1-7-title: Anteil Menschen mit Behinderung auf dem ersten Arbeitsmarkt
 1-8-title: Anzahl Beratungsangebote/ Veranstaltungen
+2-1-title: Anteil geretteter Lebensmittel
+2-2-title: Angebot an gesunden und ausgewogenen Verpflegungsmöglichkeiten 
+2-3-title: Anteil der übergewichtigen Kinder im Schuleingangsjahr
+2-4-title: Anteil verschwendeter Lebensmittel (im privaten Haushalt)
+2-5-title: Anzahl Beratungs- und Informationsangebote zum Thema gesunde Ernährung 
+2-6-title: Anzahl und Art der Beratungs- und Aufklärungsangebote zum Thema "hochwertige Ess-Kultur"
+2-7-title: Diversität der Angebote zum Thema "hochwertige Ess-Kultur"
+3-1-title: Anzahl Kurzzeit- und Langzeitpflegeplätze
+3-2-title: Anzahl und Art Präventionsangebote
+3-3-title: Ärzteversorgung (Allg.-Mediziner/-innen je 100.000 E)
+3-4-title: Fachärzte/-innen-Versorgung (Anzahl und Verteilung im Stadtgebiet)
+3-5-title: Immission von Luftschadstoffen (µg / m³)
+3-6-title: Offene Stellen und Ausbildungen von medizinischem Fachpersonal
+3-7-title: Vorzeitige Sterblickeit (unter 70 Jahre, Todesfälle)
+3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus (Krankenhausbetten je 100.000 Einwohner:innen)
+3-9-title: Altersspezifische Krankheitsdauer und -art
+3-10-title: Angebote zur gesunden Ernährung im Rahmen der Stadt
+3-11-title:	Anzahl an Initiativen zur Prävention (Sicherstellung einer ausreichenden medizinischen Infrastruktur)
+3-12-title:	Anzahl an Sportplätzen und Bewegungsangeboten (z.B. Disc-Golf, Lauftreffs etc.)
+3-13-title:	Präventionsangebote zur Reduzierung der gesundheitlichen physischen und psychischen Belastung
