--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -36,7 +36,7 @@
 
 6-1-title: Anzahl sanitärer Einrichtungen im öffentlichen Raum 
 6-2-title: Anzahl Trinkwasserbrunnen
-6-3-title: "Nitrat im Grundwasser: Anteil der Messstellen, an denen der Schwellenwert von 50 mg Nitrat pro Liter überschritten wird."
+6-3-title: Nitrat im Grundwasser: Anteil der Messstellen, an denen der Schwellenwert von 50 mg Nitrat pro Liter überschritten wird.
 6-4-title: Verhältnis von Trennsystemen zu Mischwasserkanälen
 
 7-1-title: Strom aus Windkraft* (Watt je Einwohner:in)
