--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 01-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Absolut 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,9 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Amt für Soziales - Obdachlosenhilfe Ingolstadt, Eigene Darstellung   # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Fallzahlen nach Stichtag 31.12.; Nutzung von Appartements rund um die Uhr, d.h. feste Einquartierung; separate Unterkünfte für Familien mit Minderjährigen; soziale Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF Nowohnungen <br>
