--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: Amt für Soziales - Obdachlosenhilfe Ingolstadt  # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Der Indikator beschreibt mehrere Formen der Unterbringung. Dazu gehören die Nutzung von Appartements rund um die Uhr, d.h. feste Einquartierung; separate Unterkünfte für Familien mit Minderjährigen; soziale Betreuung durch Kommune; Förderung von Trägern z.B. Straßenambulanz St. Franziskus, SkF (Sozialdienst katholischer Frauen) Notwohnungen (Fallzahlen jeweils nach Stichtag 31. Dezember). <br>
