--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -21,8 +21,8 @@ national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE: Amt für Soziales - Obdachlosenhilfe Ingolstadt  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
