--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 01-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Kinder unter 15 J. in Grundsicherung (SGB II)
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,9 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE:  Amt für Statistik und Stadtforschung  
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die Anzahl von Kindern unter 15 Jahren, die Grundsicherungsleistungen nach dem SGB II in Anspruch nehmen. <br>
