--- a/meta/1-4-2.md
+++ b/meta/1-4-2.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: Amt für Statistik und Stadtforschung
 source_earliest_available_1: 
 source_periodicity_1: 
 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Prozentualer Anteil von Kindern unter 15 Jahren, die Grundsicherungsleistungen nach dem SGB II in Anspruch nehmen. <br>
