--- a/meta/1-4-2.md
+++ b/meta/1-4-2.md
@@ -21,8 +21,8 @@ national_geographical_coverage: Land Bayern
 computation_definitions: 
 
 SOURCE_TYPE: Amt für Statistik und Stadtforschung
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
