--- a/meta/1-4-1.md
+++ b/meta/1-4-1.md
@@ -20,9 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:  Amt für Statistik und Stadtforschung  
+SOURCE_TYPE:  Amt für Statistik und Stadtforschung  # data source
 source_earliest_available_1: 2019
-source_periodicity_1: jährlich
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
