--- a/meta/1-2.md
+++ b/meta/1-2.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Empfänger/-innen von Grundsicherung im Alter <br>
+Empfänger/-innen von Grundsicherung im Alter. Empfänger/-innen von Grundsicherung im Alter. Vor dem Jahr 1947 geborene Personen erreichten die Altersgrenze mit 65 Jahren; für 1947 und später Geborene wird die Altersgrenze seit dem Jahr 2012 schrittweise auf 67 Jahre angehoben. <br>
