--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -20,9 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Amt für Statistik und Stadtforschung  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner unter 65.
