--- a/meta/1-6.md
+++ b/meta/1-6.md
@@ -21,8 +21,8 @@ national_geographical_coverage: Land Bayern
 computation_definitions: 
 
 SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger) in % der Gesamtbevölkerung. Die Transferleistungen der sozialen Mindestsicherungssysteme sind finanzielle Hilfen des Staates, die zur Sicherung des grundlegenden Lebensunterhalts dienen. <br>
