--- a/meta/1-4-2.md
+++ b/meta/1-4-2.md
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE: Amt für Statistik und Stadtforschung # data source
