--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 03-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: µg / m³
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,13 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: https://www.lfu.bayern.de/luft/immissionsmessungen/messwertarchiv/index.htm
+![image](https://user-images.githubusercontent.com/127312100/230040920-c65d5e30-0ccc-4db3-8c9b-9874594a5de3.png)   # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +32,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des LÜB-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. <br>
