--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -20,8 +20,8 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: https://www.lfu.bayern.de/luft/immissionsmessungen/messwertarchiv/index.htm
-![image](https://user-images.githubusercontent.com/127312100/230040920-c65d5e30-0ccc-4db3-8c9b-9874594a5de3.png)   # data source  
+SOURCE_TYPE: https://www.lfu.bayern.de/luft/immissionsmessungen/messwertarchiv/index.html
+
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
