--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -31,3 +31,4 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Anzahl und Art Präventionsangebote. <br>
