--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 03-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl Kurzzeit- und Langzeitpflegeplätze 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,17 +17,18 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: "Gesundheitsamt"  # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Anzahl Kurzzeit- und Langzeitpflegeplätze. Kurzzeitpflege ist dabei auf einen Zeitraum von bis zu acht Wochen im Jahr begrenzt, im Gegensatz dazu meint man mit Langzeitpflege eine dauerhafte Pflege ohne zeitliche Begrenzung. <br>
