--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 04-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Kinder in öff. Tageseinrichtungen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,10 +17,10 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Anzahl der unter 3-jährigen Kinder in öff. Tageseinrichtungen.
