--- a/meta/4-4.md
+++ b/meta/4-4.md
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: "Amt für Kinderbetreuung und vorschulische Bildung"  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Von 120 Kita-Einrichtungen sind 8 Integrative Einrichtungen. Integrative Plätze werden auch in vielen anderen Einrichtungen im Verhältnis 1 zu 3 vergeben.  Im Jahr 2021 wurden 168 I-Kinder in 52 nicht integrativen  Einrichtungen betreut. <br>
