--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
 SOURCE_TYPE:   # data source  
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die wohnortnahe Versorgung der Grundschüler/-innen in Bayern regelt die sogenannte Sprengelpflicht Art. 42 BayEUG. Schüler/-innen einer Grundschule oder Mittelschule erfüllen ihre Schulpflicht in der Schule, in deren Schulsprengel sie ihren gewöhnlichen Aufenthalt haben.  Die jeweilige Bezirksregierung bestimmt für jede Grundschule ein räumlich abgegrenztes Gebiet als Schulsprengel Art. 26 BayEUG. Die Stadt Ingolstadt als Sachaufwandstäger wird an der Sprengelfestlegung beteiligt. Zahlen zur einwohnergewichteten Luftliniendistanz sind aufgrund der Sprengelregelung für die Schulverwaltung nicht erforderlich und werden daher nicht erhoben. <br>
