--- a/meta/5-5.md
+++ b/meta/5-5.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Quote der sozialversicherungspflichtig beschäftigten Frauen zwischen 15 - 65 Jahren. <br>
+Quote der sozialversicherungspflichtig beschäftigten Frauen und Männer zwischen 15 - 65 Jahren. <br>
