--- a/meta/6-3.md
+++ b/meta/6-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 06-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anteil der Messstellen, an denen der Schwellenwert von 50 mg Nitrat pro Liter überschritten wird
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: "Wasserwirtschaftsamt Ingolstadt / INKB"   # data source  
+source_earliest_available_1: 2021
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,11 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Nitrat im Grundwasser: Anteil der Messstellen, an denen der Schwellenwert von 50 mg Nitrat pro Liter überschritten wird. <br>
+Berücksichtigte Messstellen und jeweilige Werte: <br>
+
+Messstellen-Nr.: 1131723400217 <br>
+Gemeinde: Ingolstadt <br>
+Landkreis: Ingolstadt <br>
+Betreiber: WWA Ingolstadt <br>
+Nitrat (mg/l): 8.1 (Letzter Stand: 3.11.2021) <br> 
