--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 07-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Strom aus Windkraft in Watt je Einwohner/-in 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,10 +17,10 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: "Stadtwerke Ingolstadt" # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
@@ -31,3 +31,5 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Strom aus Windkraft in Watt je Einwohner/-in. <br>
+Sinkend, da Leistung gleich, jedoch steigt die Einwohnerzahl. Bayerische Hemmnisse, z.B. 10-H-Regel.
