--- a/meta/5-1.md
+++ b/meta/5-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 05-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,14 +20,15 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: "Gleichstellungsbeauftragte Ingolstadt"  # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Anzahl der Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
