--- a/meta/1-6.md
+++ b/meta/1-6.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
-SOURCE_TYPE:  Amt für Statistik und Stadtforschung   # data source  
+SOURCE_TYPE:  "Amt für Statistik und Stadtforschung"   # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
