--- a/meta/4-2.md
+++ b/meta/4-2.md
@@ -31,3 +31,4 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+ Anzahl der Aus- und Weiterbildungsangebote für städtische Mitarbeitende.
