--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -20,7 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolsatdt 
 computation_definitions: 
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: "[Amt für Statistik und Stadtforschung](https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=165![image](https://user-images.githubusercontent.com/127312100/230085778-710dc647-2594-4a3b-a9e0-cc440c153d23.png)
+1215646954&code=22543#abreadcrumb
+)"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
