--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -20,7 +20,8 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolsatdt 
 computation_definitions: 
 
-SOURCE_TYPE: "Schulverwaltungsamt, Ref. IV"  # data source  
+SOURCE_TYPE: "Schulverwaltungsamt, Ref. IV. https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=21111-107s&bypass=true&levelindex=1&levelid=1665381899858#abreadcrumb
+![image](https://user-images.githubusercontent.com/127312100/230086349-af7850b2-f7d9-48af-9abe-ba3710aa008b.png)"  # data source  
 source_earliest_available_1: 2019 
 source_periodicity_1: Jährlich
 
