--- a/meta/5-5.md
+++ b/meta/5-5.md
@@ -20,7 +20,8 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: "Amt für Statistik und Stadtforschung. https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=beschaeftigung-sozbe-bq-heft
+![image](https://user-images.githubusercontent.com/127312100/230086708-08367f58-cb1e-4e1d-a107-d8f6bd8126af.png)"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
