--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Land Bayern 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE:  https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=82711-103&bypass=true&levelindex=1&levelid=1656497199885#abreadcrumb # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
