--- a/meta/8-5.md
+++ b/meta/8-5.md
@@ -18,11 +18,11 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Land Bayern 
-computation_definitions: 
+computation_definitions:
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: "Jobcenter Ingolstadt"   # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,5 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Langzeitarbeitslosenquote: Prozentualer Anteil, der länger als 1 Jahr arbeitslos ist. <br>
+Anstieg bedingt durch die Corona-Pandemie von 2020 auf 2021. Schwankung in 2022: Starker Einfluss durch Flüchtlinge aus der Ukraine. Diese sind noch unter einem Jahr im Leistungsbezug und senken somit in Relation den prozentualen Anteil der Langzeitarbeitslosen deutlich. In 2022 Fokus auf die Vermittlung von Langzeitbeziehern, unter denen sich natürlich auch Langzeitarbeitslose befanden. <br>
