--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -20,7 +20,8 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolsatdt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href="[Link-Ziel](https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb![image](https://user-images.githubusercontent.com/127312100/230091273-92cd3b79-b85f-414b-8814-6985c2ace75c.png))">Regionalstatistik</a>
+SOURCE_TYPE: <a href= "https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb">Regionalstatistik</a>
+
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
