--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href="https://www.lfu.bayern.de/luft/immissionsmessungen/messwertarchiv/index.html">LfU Bayernt</a>
+SOURCE_TYPE: <a href= "https://www.lfu.bayern.de/luft/immissionsmessungen/messwertarchiv/index.html">LfU Bayern</a>
 
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
