--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -20,8 +20,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "https://www.ingolstadt.de/Kultur/Bildung-Wissenschaft/Schule-Schulverwaltung/Schulsprengel-Gastschulverh%C3%A4ltnis/
-![image](https://user-images.githubusercontent.com/127312100/230086081-d795b7e2-f95a-4e13-b008-5259783ccb7e.png)"  # data source  
+SOURCE_TYPE: <a href= "https://www.ingolstadt.de/Kultur/Bildung-Wissenschaft/Schule-Schulverwaltung/Schulsprengel-Gastschulverh%C3%A4ltnis/">Schulsprengel</a>
+
+  # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
