--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolsatdt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=21111-107s&bypass=true&levelindex=1&levelid=1665381899858#abreadcrumb>LfStat</a>
+SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=21111-107s&bypass=true&levelindex=1&levelid=1665381899858#abreadcrumb">LfStat</a>
 
  # data source  
 source_earliest_available_1: 2019 
