--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -22,8 +22,8 @@ computation_definitions:
 
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=previous&levelindex=1&step=0&titel=Suche&levelid=1648115340450&levelid=1648115051552#abreadcrumb">LfStat</a>  # data source
 
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -32,3 +32,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Existenzgründungen je 1.000 Einwohner. Eine natürliche Person, die eine gewerbliche oder selbstständige berufliche Tätigkeit aufnimmt (§ 507 BGB). <br>
