--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href= "https://www.lfu.bayern.de/luft/immissionsmessungen/messwertarchiv/index.html">LfU Bayern</a>
+SOURCE_TYPE: <a href= "https://www.lfu.bayern.de/luft/immissionsmessungen/messwerte/stationen/detail/1409/172">LfU Bayern</a>
 
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
@@ -32,4 +32,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des LÜB-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. <br>
+Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des LÜB-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. Hier wird der Jahresmittelwert des Feinstaub-PM10 an der Messstation Rechbergstraße in Ingolstadt angegeben. <br>
