--- a/meta/8-1.md
+++ b/meta/8-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 08-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Bruttoinlandsprodukt € je Einwohner/-in 
+computation_units: Anzahl Aufstocker 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"   # data source  
+SOURCE_TYPE: "Jobcenter Ingolstadt"   # data source  
 source_earliest_available_1: 2019 
 source_periodicity_1: Jährlich
 
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Bruttoinlandsprodukt € je Einwohner/-in.
+Anteil der erwerbstätigen ALG-II Bezieher an allen erwerbsfähigen Leistungsbeziehern. <br>
