--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl der angesiedelten Unternehmen in brigk und EGZ 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "ComIN"  # data source  
+SOURCE_TYPE: "Existenzgründerzentrum (EGZ) und digitales Gründerzentrum (brigk)"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentuale Breitbandversorgung der privaten Haushalte. Glasfaserausbau bis auf Innenstadt abgeschlossen.
+Gesamtzahl der angesiedelten Unternehmen im Existenzgründerzentrum (EGZ) und im digitalen Gründerzentrum brigk in Ingolstadt. <br>
