--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 09-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Existenzgründungen 
+computation_units: Existenzgründungen je 1.000 EW 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
