--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 17-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl Projekte mit migrantischen Organisationen 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsarbeit organisiert und realisiert die Integrationsbeauftragte der Stadt Ingolstadt zahlreiche Projekte sowohl innerhalb der Stadtverwaltung als auch zwischen den vorhandenen freien und gemeinnützigen Institutionen und der Stadt. Zu den Projekten der letzten Jahre gehören: Tag der Muttersprache, Wochen gegen Rassismus, Begegnung der Religionen, Fest der Kulturen, Interkulturelle Woche, Tag der Migranten, Sitzungen des Migrationsrates, Dialog der Religionen, Koop. mit dem Goethe-Institut / Verein ISA e.V., Schulung ausländ. Kulturvereine, Sitzungen NefAS (Netzwerk für Arbeit und Sozialbelange), Schulung muslim. Seelsorger/-innen, MiMi (Interkulturelles Gesundheitsprojekt), Sprachmittler/-innen, Veranstaltung anlässlich des Angriffskriegs auf die Ukraine. Weitere Informationen finden Sie unter: <a href="https://www.ingolstadt.de/Leben/Diversit/Integration/Integrationsbeauftragte">Integrationsbeauftragte</a> 
