--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -7,7 +7,7 @@ indicator_sort_order: 17-03-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl Projekte mit migrantischen Organisationen 
 data_start_values:  # initialize the field to be shown  
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Integrationsbeauftragte Stadt Ingolstadt  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
