--- a/meta/11-1.md
+++ b/meta/11-1.md
@@ -7,9 +7,9 @@ indicator_sort_order: 11-01-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung in Prozent 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.kba.de/DE/Home/home_node.html">Kraftfahrt-Bundesamt</a>  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Anteil der reinen Elektrofahrzeuge am Gesamtbestand in %, jeweils zum 01.01. <br>
