--- a/meta/13-2.md
+++ b/meta/13-2.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
+SOURCE_TYPE: Stabsstelle Klima, Umwelt, Biodiversität und Donau der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 
 source_periodicity_1: 
 
