--- a/meta/13-3.md
+++ b/meta/13-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 13-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Hitzetage pro Jahr
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Deutscher Wetterdienst  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Heißer Tag oder Hitzetag, ist die meteorologisch-klimatologische Bezeichnung für Tage, an denen die Tageshöchsttemperatur 30 °C erreicht oder übersteigt. Er wird zur genaueren Darstellung des Klimas eines Ortes und zur Beurteilung von Hitzewellen herangezogen. Gemessen wird in einer Standard-Wetterhütte in zwei Metern Höhe. Die Menge der heißen Tage ist eine Untermenge der Sommertage. Sinkt die Tagestiefsttemperatur nicht unter 20 °C, spricht man zusätzlich von Tropennacht.
