--- a/meta/14-2.md
+++ b/meta/14-2.md
@@ -9,7 +9,7 @@ indicator_sort_order: 14-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Gewässerqualität Badeseen 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/index.php?La=1&object=tx,465.2194.1&kat=&kuo=2&sub=0&NavID=2789.411">Baggersee</a> und <a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/index.php?La=1&object=tx,465.2193.1&sub=0">Auwaldsee</a>  # data source  
+source_earliest_available_1: 2018
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,12 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Eine Einstufung nach EU-Badegewässerrichtlinien wird unter Durchführung einer speziellen Konformitätsberechnung vorgenommen. Hierzu werden alle Messwerte der letzten vier Jahre herangezogen. <br>
+- mangelhafte Badegewässerqualität <br>
+* Ausreichende Badegewässerqualität <br>
+** Gute Badegewässerqualität <br>
+*** Ausgezeichnete Badegewässerqualität <br>
+<br>
+Die Einstufung der Badegewässer erfolgt aufgrund der durchgeführten Bewertung nach dem Ende jeder Badesaison. Sie beschreibt den qualitativen Zustand der Badegewässer anhand der mikrobiologischen Parameter Escherichia coli und Intestinale Enterokokken über den Zeitraum der letzten 4 Jahre in den Kategorien “Ausgezeichnet”, “Gut”, “Ausreichend”, “Mangelhaft”.
+<br>
+Genaue Daten sind hier zu finden <a href="https://eur-lex.europa.eu/legal-content/DE/TXT/?qid=1534167377521&uri=CELEX:02006L0007-20140101">Gewässerqualität</a>
