--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsarbeit organisiert und realisiert die Integrationsbeauftragte der Stadt Ingolstadt zahlreiche Projekte sowohl innerhalb der Stadtverwaltung als auch zwischen den vorhandenen freien und gemeinnützigen Institutionen und der Stadt. Zu den Projekten der letzten Jahre gehören: Tag der Muttersprache, Wochen gegen Rassismus, Begegnung der Religionen, Fest der Kulturen, Interkulturelle Woche, Tag der Migranten, Sitzungen des Migrationsrates, Dialog der Religionen, Koop. mit dem Goethe-Institut / Verein ISA e.V., Schulung ausländ. Kulturvereine, Sitzungen NefAS (Netzwerk für Arbeit und Sozialbelange), Schulung muslim. Seelsorger/-innen, MiMi (Interkulturelles Gesundheitsprojekt), Sprachmittler/-innen, Veranstaltung anlässlich des Angriffskriegs auf die Ukraine. Weitere Informationen finden Sie unter: <a href="https://www.ingolstadt.de/Leben/Diversit/Integration/Integrationsbeauftragte">Integrationsbeauftragte</a> 
+Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsarbeit organisiert und realisiert die Integrationsbeauftragte der Stadt Ingolstadt zahlreiche Projekte sowohl innerhalb der Stadtverwaltung als auch zwischen den vorhandenen freien und gemeinnützigen Institutionen und der Stadt. Zu den Projekten der letzten Jahre gehören: Tag der Muttersprache, Wochen gegen Rassismus, Begegnung der Religionen, Fest der Kulturen, Interkulturelle Woche, Tag der Migranten, Sitzungen des Migrationsrates, Dialog der Religionen, Koop. mit dem Goethe-Institut / Verein ISA e.V., Schulung ausländ. Kulturvereine, Sitzungen NefAS (Netzwerk für Arbeit und Sozialbelange), Schulung muslim. Seelsorger/-innen, MiMi (Interkulturelles Gesundheitsprojekt), Sprachmittler/-innen, Veranstaltung anlässlich des Angriffskriegs auf die Ukraine. Weitere Informationen finden Sie unter: <a href="https://www.ingolstadt.de/Leben/Diversit/Integration/Integrationsbeauftragte">Integrationsbeauftragte Stadt Ingolstadt</a>. 
