--- a/meta/15-5.md
+++ b/meta/15-5.md
@@ -26,7 +26,7 @@ source_periodicity_1:
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
