--- a/meta/13-1.md
+++ b/meta/13-1.md
@@ -7,7 +7,7 @@ indicator_sort_order: 13-01-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: true  # chart types include: bar, line, binary 
+graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Klimaanalyse-Karte 
 data_start_values:  # initialize the field to be shown  
