--- a/translations/de/my-custom-translations.yml
+++ b/translations/de/my-custom-translations.yml
@@ -3,9 +3,19 @@
 
 frontpage-intro-title: 17 Ziele, um unsere Welt zu verändern
 frontpage-intro-description: |
-  Die 17 Ziele für nachhaltige Entwicklung (SDGs) sollen weltweit eine nachhaltige Entwicklung auf ökonomischer, sozialer und ökologischer Ebene anstoßen und wurden 2015 von allen UN-Mitgliedsstaaten als Teil der Agenda 2030 ratifiziert.
-  Um die weltweiten Ziele auch auf kommunaler Ebene voranzubringen, hat der Berliner Bezirk Treptow-Köpenick 2021 eine Kommunale Nachhaltigkeitsstrategie verabschiedet, welche gemeinsam mit verschiedenen Akteuren des Bezirks erarbeitet wurde.
-  Diese Kommunale Nachhaltigkeitsstrategie wurde um ein SDG-Monitoring ergänzt, zu  welchem sich an dieser Stelle die Indikatoren und Daten finden.
+  Die 17 Ziele für nachhaltige Entwicklung (Sustainable Development Goals, kurz SDGs) sollen weltweit eine nachhaltige Entwicklung auf ökonomischer, 
+  sozialer und ökologischer Ebene anstoßen und wurden 2015 von allen UN-Mitgliedsstaaten (Vereinten Nationen, engl.: United Nations) als Teil der Agenda 2030 ratifiziert.
+  Um die weltweiten Ziele auch auf kommunaler Ebene voranzubringen, hat die Stadt Ingolstadt am 28. Februar 2023 ihre Nachhaltigkeitsagenda verabschiedet. 
+  In einem parallellaufenden Prozess wurde vom Stadtrat im Juni 2022 bereits das “integrierte Klimaschutzkonzept” beschlossen, welches ein klimaneutrales Ingolstadt 
+  bis 2035 vorsieht. <br>
+  <br>
+  Unter Nachhaltigkeit versteht Ingolstadt neben dem schonenden Umgang mit der Umwelt unter anderem auch das würde- und friedvolle Leben miteinander, soziale Wärme, 
+  Vielfalt, wirtschaftliche Innovation sowie eine hohe Bildung. In einem umfassenden Beteiligungsprozess wurden gemeinsam mit der Stadtgesellschaft fünf Handlungsfelder 
+  und insgesamt 15 dazu passende Schwerpunktthemen für Ingolstadts Zukunft identifiziert. Diese sind hinterlegt mit Ingolstadt-spezifischen Zielen und Indikatoren, 
+  welche sich wiederum an den SDGs der UN orientieren. Die Kommunale Nachhaltigkeitsstrategie der Stadt Ingolstadt wurde um ein digitales SDG-Monitoring ergänzt, 
+  zu welchem Sie an dieser Stelle die Indikatoren und Daten finden. Hier haben Sie die Möglichkeit, sich digital über den aktuellen Stand der Zielerreichung zu 
+  informieren.
+
 
 my-goals-grid-title: Daten für die nachhaltigen Entwicklungsziele (SDGs) in Ingolstadt
 my-goals-grid-description: Klicken Sie auf die einzelnen Ziele, um die Daten unserer lokalen Indikatoren für nachhaltige Entwicklung anzuzeigen.
